<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/saveNote"
        android:title="@string/saveNote"
        app:showAsAction="always"
        android:icon="@drawable/ic_save_grey_700_24dp"
        android:orderInCategory="1">

    </item>

<!--    <item
        android:id="@+id/shareNote"
        android:title="@string/share"
        android:icon="@drawable/ic_share_grey_700_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="2">
    </item>-->

    <item
        android:id="@+id/revertChanges"
        android:title="@string/revertChanges"
        android:icon="@drawable/ic_undo_grey_700_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="3">
    </item>

    <item
        android:id="@+id/deleteItem"
        android:title="@string/deleteNote"
        android:icon="@drawable/ic_delete_grey_700_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="0">
    </item>


</menu>